--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -127,6 +127,12 @@
               <mat-option *ngFor="let item of listStatusChatBot" [value]="item.value">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
+
+          <mat-form-field fxFlex="16" class="is-light form-primary">
+            <mat-select placeholder="GSR" [formControl]="gsr">
+              <mat-option *ngFor="let item of listGSR" [value]="item.value">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
       </form>
       <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
@@ -173,6 +179,12 @@
         </ngx-datatable-column>
 
         <ngx-datatable-column name="SRC Type" prop="src_type" summary-template="activeCell">
+        </ngx-datatable-column>
+        
+        <ngx-datatable-column name="GSR" prop="gsr_flag" summary-template="activeCell">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.gsr_flag === 1 ? 'On' : 'Off'}}
+          </ng-template>
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Kode WS" prop="wholesaler_code" summary-template="activeCell" [sortable]="false">
