feat: CDE 2564 B2C EVoucher Phase 1 #8

--- a/src/app/pages/b2c-voucher/edit/b2c-voucher-edit.component.html
+++ b/src/app/pages/b2c-voucher/edit/b2c-voucher-edit.component.html
@@ -10,29 +10,29 @@
         <mat-tab label="Detail Voucher">
           <div class="ayo-middle" fxLayout="column">
             <form autocomplete="off" [formGroup]="formDetailVoucher" (keydown.enter)="$event.preventDefault();">
-              <div fxLayout="row wrap" fxLayoutGap="20px" class="top-table p-8 pt-24 ml-24">
-                <mat-form-field fxFlex="50" class="is-light pb-12">
+              <div fxLayout.gt-xs="row wrap" fxLayout="column" fxLayoutGap="20px" class="top-table p-8 pt-24 ml-24">
+                <mat-form-field fxFlex.gt-xs="50" class="is-light pb-12">
                   <input matInput type="text" placeholder="Nama Voucher" formControlName="name">
                   <mat-error *ngIf="formDetailVoucher.controls['name'].hasError('required') && formDetailVoucher.controls['name'].touched ">
                     Nama Voucher harus diisi.
                   </mat-error>
                 </mat-form-field>
-                <div fxLayout="row" fxFlex="50" fxLayoutGap="20px">
-                  <mat-form-field class="is-light pb-12" fxFlex="45%">
+                <div fxLayout.gt-xs="row" fxLayout="column" fxFlex.gt-xs="50" fxLayoutGap="20px">
+                  <mat-form-field class="is-light pb-12" fxFlex.gt-xs="50">
                     <input matInput type="number" placeholder="Nilai Voucher" formControlName="voucherValue">
                     <mat-error *ngIf="formDetailVoucher.controls['voucherValue'].hasError('required') && formDetailVoucher.controls['voucherValue'].hasError('min') && formDetailVoucher.controls['voucherValue'].touched ">
                       Nilai Voucher harus diisi.
                     </mat-error>
                   </mat-form-field>
-                  <mat-form-field class="is-light pb-12" fxFlex="45%">
+                  <mat-form-field class="is-light pb-12" fxFlex.gt-xs="50">
                     <input matInput type="number" placeholder="Jumlah Voucher per Consumer" formControlName="jumlahVoucherPerConsumer">
                     <mat-error *ngIf="formDetailVoucher.controls['jumlahVoucherPerConsumer'].hasError('required') && formDetailVoucher.controls['jumlahVoucherPerConsumer'].hasError('min') &&formDetailVoucher.controls['jumlahVoucherPerConsumer'].touched ">
                       Jumlah Voucher per Consumer harus diisi.
                     </mat-error>
                   </mat-form-field>
                 </div>
-                <div fxFlex="50" fxLayout="row wrap" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-                  <mat-form-field fxFlex="45%" class="is-light form-primary pb-12">
+                <div fxLayout.gt-xs="row" fxLayout="column" fxFlex.gt-xs="50" fxLayoutGap="20px">
+                  <mat-form-field class="is-light form-primary pb-12" fxFlex.gt-xs="50">
                     <input matInput (focus)="startPicker.open()" [matDatepicker]="startPicker"
                       placeholder="Tanggal Awal Program" formControlName="startDate" [min]="minDateVoucher">
                     <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
@@ -45,7 +45,7 @@
                     </mat-error>
                   </mat-form-field>
 
-                  <mat-form-field fxFlex="45%" class="is-light form-primary pb-12">
+                  <mat-form-field class="is-light form-primary pb-12" fxFlex.gt-xs="50">
                     <input matInput (focus)="endDate.open()" [min]="formDetailVoucher.controls['startDate'].value" [matDatepicker]="endDate"
                       placeholder="Tanggal Akhir Program" formControlName="endDate">
                     <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
@@ -58,8 +58,8 @@
                     </mat-error>
                   </mat-form-field>
                 </div>
-                <div fxFlex="50" fxLayout="row wrap" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-                  <mat-form-field fxFlex="45%" class="is-light form-primary pb-12">
+                <div fxLayout.gt-xs="row" fxLayout="column" fxFlex.gt-xs="50" fxLayoutGap="20px">
+                  <mat-form-field class="is-light form-primary pb-12" fxFlex.gt-xs="50">
                     <input matInput (focus)="voucherPicker.open()" [matDatepicker]="voucherPicker"
                       placeholder="Tanggal Awal Pemakaian Voucher" formControlName="available_at" [min]="minDateVoucher">
                     <mat-datepicker-toggle matSuffix [for]="voucherPicker"></mat-datepicker-toggle>
@@ -72,7 +72,7 @@
                     </mat-error>
                   </mat-form-field>
 
-                  <mat-form-field fxFlex="45%" class="is-light form-primary pb-12">
+                  <mat-form-field class="is-light form-primary pb-12" fxFlex.gt-xs="50">
                     <input matInput (focus)="voucherExpiry.open()" [min]="formDetailVoucher.controls['available_at'].value"
                       [matDatepicker]="voucherExpiry" placeholder="Tanggal Kedaluwarsa Voucher"
                       formControlName="expired_at">
@@ -90,8 +90,8 @@
               <div class="p-8 pb-8 ml-24" fxLayout="row" fxLayoutAlign="start center">
                 <span class="font-size-16">Batasan</span>
               </div>
-              <div fxLayout="row wrap" fxLayoutGap="20px" class="top-table p-8 ml-24">
-                <div fxFlex="60" fxLayoutGap="20px">
+              <div fxLayout.gt-xs="row wrap" fxLayout="column" fxLayoutGap="20px" class="top-table p-8 ml-24">
+                <div fxFlex="100" fxLayoutGap="20px">
                   <mat-checkbox formControlName="limit_by_product" (change)="isChecked('product', $event)">
                     Batasi dengan Produk
                   </mat-checkbox>
@@ -102,7 +102,7 @@
                     Berlaku Pembelian Minimum
                   </mat-checkbox>
                 </div>
-                <mat-form-field fxFlex="50" class="pt-20 is-light" *ngIf="formDetailVoucher.get('limit_by_product').value">
+                <mat-form-field  fxFlex="50" class="pt-20 is-light" *ngIf="formDetailVoucher.get('limit_by_product').value">
                   <mat-chip-list #chipList aria-label="Product List">
                     <mat-chip *ngFor="let product of productList" [selectable]="selectable" [removable]="removable"
                       (removed)="remove(product)">
