--- a/src/app/pages/b2c-voucher/edit/tab/design-voucher/design-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/design-voucher/design-voucher.component.html
@@ -67,7 +67,7 @@
           </div>
         </div>
       </div>
-      <div *ngIf="!bannerSelected && detailVoucher.image_url" class="pt-16 px-24">
+      <div *ngIf="!bannerSelected && detailVoucher?.image_url" class="pt-16 px-24">
         <div class="py-16" fxLayout="row" fxLayoutAlign="start center">
           <span class="text-bold">Contoh Tampilan Spanduk</span>
         </div>
