--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -11,7 +11,7 @@
 
         <div fxFlex="45">
 
-        <div class="px-12">
+        <div class="px-12" fxLayout="column">
           <mat-form-field fxFlex="50" class="is-light" *ngIf="isVoucherAutomation.value === true">
             <input matInput type="number" placeholder="Jumlah Total Alokasi Voucher" formControlName="allocationVoucher">
             <mat-error *ngIf="formConsumerGroup.controls['allocationVoucher'].hasError('required') && formConsumerGroup.controls['allocationVoucher'].touched ">
@@ -21,25 +21,22 @@
               Jumlah Total Alokasi Voucher harus diisi.
             </mat-error>
           </mat-form-field>
-          <div fxLayout="row">
-            <mat-form-field class="is-light form-primary">
-              <mat-select formControlName="is_smoker" placeholder="Tipe Consumer">
-                <mat-option *ngFor="let item of listSmoker" [value]="item.value">{{item.name}}</mat-option>
-              </mat-select>
-              <mat-error
-                *ngIf="formConsumerGroup.controls['is_smoker'].hasError('required') && formConsumerGroup.controls['is_smoker'].touched">
-                Tipe Consumer harus diisi
-              </mat-error>
-            </mat-form-field>
-          </div>
+          <mat-form-field fxFlex="50" class="is-light form-primary">
+            <mat-select formControlName="is_smoker" placeholder="Tipe Consumer">
+              <mat-option *ngFor="let item of listSmoker" [value]="item.value">{{item.name}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formConsumerGroup.controls['is_smoker'].hasError('required') && formConsumerGroup.controls['is_smoker'].touched">
+              Tipe Consumer harus diisi
+            </mat-error>
+          </mat-form-field>
         </div>
 
         <div class="pb-16 px-12">
           <div class="pb-8" fxLayout="row" fxLayoutAlign="start center">
             <span class="font-size-16">Batasan Umur</span>
           </div>
-          <div class="" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="30px" fxLayoutGap.lt-md="0px">
-            <mat-form-field class="is-light form-primary">
+          <div class="" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="30px" fxLayoutGap.lt-md="0px">
+            <mat-form-field class="is-light form-primary" fxFlex.xs="50">
               <input matInput type="number" formControlName="age_consumer_from" placeholder="Dari">
               <mat-error *ngIf="formConsumerGroup.controls['age_consumer_from'].hasError('required') && formConsumerGroup.controls['age_consumer_from'].touched">
                 Dari harus diisi
@@ -48,7 +45,7 @@
                 Tidak boleh kurang dari {{formConsumerGroup.controls['is_smoker'].value === 'yes' ? '18' : '0'}}
               </mat-error>
             </mat-form-field>
-            <mat-form-field class="is-light form-primary">
+            <mat-form-field class="is-light form-primary" fxFlex.xs="50">
               <input matInput type="number" formControlName="age_consumer_to" placeholder="Sampai">
               <mat-error *ngIf="formConsumerGroup.controls['age_consumer_to'].hasError('required') && formConsumerGroup.controls['age_consumer_to'].touched">
                 Sampai harus diisi
