--- a/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
@@ -7,48 +7,48 @@
     </div>
 
     <form [formGroup]="formFilter" autoComplete="off">
-      <div class="pl-16 pr-16 mt-8 bb" fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="20px">
-        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+      <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutAlign="space-between stretch" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
+        <mat-form-field fxFlex="31%" class="is-light form-primary">
           <mat-select placeholder="National" formControlName="national">
             <mat-option [value]="item.id" *ngFor="let item of listLevelArea">{{item.name}}</mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+        <mat-form-field fxFlex="31%" class="is-light form-primary">
           <mat-select placeholder="Zone" formControlName="zone" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ? 'Semua
               Zona' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+        <mat-form-field fxFlex="31%" class="is-light form-primary">
           <mat-select placeholder="Regional" formControlName="region" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all' ? 'Semua
               Regional' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+        <mat-form-field fxFlex="31%"  class="is-light form-primary">
           <mat-select placeholder="Area" formControlName="area" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ? 'Semua
               Area' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+        <mat-form-field fxFlex="31%"  class="is-light form-primary">
           <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">{{item.name === 'all' ? 'Semua
               Salespoint' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+        <mat-form-field fxFlex="31%"  class="is-light form-primary">
           <mat-select placeholder="District" formControlName="district" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name === 'all' ? 'Semua
               District' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+        <mat-form-field fxFlex="31%"  class="is-light form-primary">
           <mat-select placeholder="Territory" formControlName="territory" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['territory'])">{{item.name === 'all' ? 'Semua
               Territory' :
