--- a/src/app/pages/b2c-voucher/edit/b2c-voucher-edit.component.html
+++ b/src/app/pages/b2c-voucher/edit/b2c-voucher-edit.component.html
@@ -148,16 +148,16 @@
           </div>
         </mat-tab>
         <mat-tab label="Panel Retailer">
-          <app-panel-retailer-voucher [data]="detailVoucher" [isLimitVoucher]="isLimitVoucher"></app-panel-retailer-voucher>
+          <app-panel-retailer-voucher [data]="detailVoucher" [isLimitVoucher]="isLimitVoucher" (onRefresh)="onRefresh()"></app-panel-retailer-voucher>
         </mat-tab>
         <mat-tab label="Panel Consumer">
-          <app-panel-consumer-voucher [data]="detailVoucher" (onChangeVoucherAutomation)="onChangeVoucherAutomation($event)"></app-panel-consumer-voucher>
+          <app-panel-consumer-voucher [data]="detailVoucher" (onChangeVoucherAutomation)="onChangeVoucherAutomation($event)" (onRefresh)="onRefresh()"></app-panel-consumer-voucher>
         </mat-tab>
         <mat-tab label="Penukaran Voucher">
-          <app-penukaran-voucher [data]="detailVoucher"></app-penukaran-voucher>
+          <app-penukaran-voucher [data]="detailVoucher" (onRefresh)="onRefresh()"></app-penukaran-voucher>
         </mat-tab>
         <mat-tab label="Design Voucher">
-          <app-design-voucher [data]="detailVoucher"></app-design-voucher>
+          <app-design-voucher [data]="detailVoucher" (onRefresh)="onRefresh()"></app-design-voucher>
         </mat-tab>
         <mat-tab label="List Detail Voucher">
           <app-list-detail-voucher [data]="detailVoucher"></app-list-detail-voucher>
