--- a/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
+++ b/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
@@ -132,14 +132,14 @@
                 <mat-icon class="secondary-text">update</mat-icon>
               </button>
               <button type="button" mat-icon-button color=""
-                matTooltip="Request File" (click)="requestFile(row)" [disabled]="!reqDownloadCondition(row)['request']">
-                <mat-icon *ngIf="reqDownloadCondition(row)['request']" class="orange-500-fg">account_balance_wallet</mat-icon>
-                <mat-icon *ngIf="!reqDownloadCondition(row)['request']" class="secondary-text">account_balance_wallet</mat-icon>
+                matTooltip="Request File" (click)="requestFile(row)" [disabled]="reqDownloadCondition(row)['request'] === false">
+                <mat-icon *ngIf="reqDownloadCondition(row)['request'] === true" class="orange-500-fg">account_balance_wallet</mat-icon>
+                <mat-icon *ngIf="reqDownloadCondition(row)['request'] === false" class="secondary-text">account_balance_wallet</mat-icon>
               </button>
-              <button type="button" mat-icon-button color="" [disabled]="!reqDownloadCondition(row)['download']"
+              <button type="button" mat-icon-button color="" [disabled]="reqDownloadCondition(row)['download'] === false"
                 matTooltip="Eksport Trade Program" (click)="downloadFile(row)">
-                <mat-icon *ngIf="reqDownloadCondition(row)['download']" class="orange-500-fg">save_alt</mat-icon>
-                <mat-icon *ngIf="!reqDownloadCondition(row)['download']" class="secondary-text">save_alt</mat-icon>
+                <mat-icon *ngIf="reqDownloadCondition(row)['download'] === true" class="orange-500-fg">save_alt</mat-icon>
+                <mat-icon *ngIf="reqDownloadCondition(row)['download'] === false" class="secondary-text">save_alt</mat-icon>
               </button>
               <button type="button" mat-icon-button color="primary"
                 [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
