--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -12,7 +12,7 @@
         <mat-tab label="Detail Voucher">
           <div class="ayo-middle" fxLayout="column">
             <form autocomplete="off" [formGroup]="formDetilVoucher" (keydown.enter)="$event.preventDefault();">
-              <!-- <div class='p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center" *ngIf="isDetail">
+              <div class='p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center" *ngIf="isDetail || isEdit">
                 <div class="button-row">
                   <button mat-flat-button style="width: 160px" color="white" (click)="exportInvoice()">
                     <mat-icon>vertical_align_top</mat-icon> Export Invoice
@@ -23,7 +23,7 @@
                     <mat-icon>vertical_align_top</mat-icon> Export XLS
                   </button>
                 </div>
-              </div> -->
+              </div>
               <div fxLayout="row wrap" fxLayoutGap="20px" class="top-table p-8" style="margin-left: 25px;">
                 <mat-form-field fxFlex="50" class="is-light">
                   <input matInput type="text" placeholder="Nama Voucher" formControlName="name">
