feat: CDE-2734 DirectInjectVoucherB2B #3

--- a/src/app/pages/b2b-voucher-inject/panel-mitra-voucher/panel-mitra-voucher.component.html
+++ b/src/app/pages/b2b-voucher-inject/panel-mitra-voucher/panel-mitra-voucher.component.html
@@ -138,7 +138,7 @@
         </ng-template>
       </ngx-datatable-column>
     </ngx-datatable>
-    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="isDetail">
+    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="isEdit">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
         (click)="onSave()">
         SIMPAN
