--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -106,7 +106,7 @@
                 
               </div>
 
-              <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="isEdit">
+              <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="isEdit || !isDetail">
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
                   (click)="onSaveDetail()">
                   SIMPAN
