feat: CDE 2564 B2C EVoucher Phase 1 #13

--- a/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
+++ b/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
@@ -14,6 +14,7 @@
     <mat-tab-group>
       <mat-tab label="Inject B2C Voucher">
         <div class="table-wrapper">
+          <div class="hole-cover"></div>
           <ngx-datatable class="material" [rows]="rows" [columnMode]="'force'" [loadingIndicator]="loadingIndicator"
             [headerHeight]="50" [footerHeight]="50" [rowHeight]="50" [rowHeight]="'auto'" [scrollbarH]="true" [scrollbarH]="true" 
             [reorderable]="reorderable" [count]="pagination.total" [limit]="pagination.per_page" [offset]="offsetPagination" 
