--- a/src/app/pages/b2c-voucher/edit/b2c-voucher-edit.component.html
+++ b/src/app/pages/b2c-voucher/edit/b2c-voucher-edit.component.html
@@ -138,7 +138,7 @@
                   </mat-error>
                 </mat-form-field>
               </div>
-              <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail">
+              <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail && detailVoucher?.is_enable_detail_voucher">
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
                   (click)="onSaveDetail()">
                   SIMPAN
