--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -305,7 +305,7 @@
 
     </form>
 
-    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail">
+    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail && detailVoucher?.is_enable_panel_customer">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
         (click)="onSave()">
         SIMPAN
