--- a/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
@@ -236,7 +236,7 @@
         ></ngx-datatable-column>
       </ngx-datatable>
     </div>
-    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail">
+    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail && detailVoucher?.is_enable_panel_retailer">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
         (click)="onSave()">
         SIMPAN
