--- a/src/app/pages/b2b-voucher-inject/panel-mitra-voucher/panel-mitra-voucher.component.html
+++ b/src/app/pages/b2b-voucher-inject/panel-mitra-voucher/panel-mitra-voucher.component.html
@@ -79,9 +79,9 @@
       [selectAllRowsOnPage]="false" [selectionType]="'checkbox'" (select)="onSelect($event)" [rowIdentity]="getId">
 
       <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
-        <ng-template ngx-datatable-header-template>
+        <!-- <ng-template ngx-datatable-header-template>
           <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected);"></mat-checkbox>
-        </ng-template>
+        </ng-template> -->
 
         <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected"
           let-onCheckboxChangeFn="onCheckboxChangeFn">
@@ -94,7 +94,7 @@
 
       <ngx-datatable-column name="Nama Toko" prop="name" [sortable]="true">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          <span class="row-name" (click)="directDetail(row)">{{row.name || '-'}}</span>
+          <span class="row-address">{{row.name || '-'}}</span>
         </ng-template>
       </ngx-datatable-column>
       <ngx-datatable-column name="Kode Agen" prop="code" [sortable]="false">
@@ -107,36 +107,17 @@
           <span class="row-address">{{row.owner || '-'}}</span>
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="Classification" prop="classification" [sortable]="false">
+      <!-- <ngx-datatable-column name="Jumlah Voucher" prop="amount">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          <span class="row-address">{{row.classification || '-'}}</span>
+          {{row.amount | rupiahFormaterWithoutRp}}
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="Kode WS" prop="ws_code" [sortable]="false">
+      <ngx-datatable-column name="Nilai Voucher" prop="nominal">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          <span class="row-address">{{row.ws_code || '-'}}</span>
+          {{row.nominal | rupiahFormater}}
         </ng-template>
-      </ngx-datatable-column>
-      <ngx-datatable-column name="Nama WS" prop="ws_name" [sortable]="false">
-        <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          <span class="row-address">{{row.ws_name || '-'}}</span>
-        </ng-template>
-      </ngx-datatable-column>
-      <ngx-datatable-column name="Coin" prop="coin" [sortable]="false">
-        <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          <span class="row-address">{{row.coin || 0}}</span>
-        </ng-template>
-      </ngx-datatable-column>
-      <ngx-datatable-column name="Menukarkan Coin" prop="coin" [sortable]="false">
-        <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          <!-- <span class="row-address">{{row.ws_name || '-'}}</span> -->
-        </ng-template>
-      </ngx-datatable-column>
-      <ngx-datatable-column name="Menukarkan Voucher" prop="coin" [sortable]="false">
-        <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          <!-- <span class="row-address">{{row.ws_name || '-'}}</span> -->
-        </ng-template>
-      </ngx-datatable-column>
+      </ngx-datatable-column> -->
+
     </ngx-datatable>
     <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="isEdit">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
