feat: CDE-2734 DirectInjectVoucherB2B #7 - delete voucher

--- a/src/app/pages/b2b-voucher-inject/index/b2b-voucher-inject.component.html
+++ b/src/app/pages/b2b-voucher-inject/index/b2b-voucher-inject.component.html
@@ -72,7 +72,7 @@
               <button mat-icon-button color="" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="primary" (click)="deleteUser(row.id)">
+              <button mat-icon-button color="primary" (click)="deleteVoucher(row.id)">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
