feat: CDE 2564 B2C EVoucher Phase 1 #14 - loader

--- a/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
+++ b/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
@@ -10,7 +10,7 @@
   </page-content-header>
   <!-- / HEADER -->
 
-  <div class="content p-24" *ngIf="!onLoad">
+  <div class="content p-24">
     <mat-tab-group>
       <mat-tab label="Inject B2C Voucher">
         <div class="table-wrapper">
